--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
+    "mdbootstrap": "^4.20.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
